# ikkoku

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main  main.cpp
include/: LookupCosine.h  LookupSine.h  Matrix3.h  Plane.h  Utilities.h  Vec3.h
src/: Matrix3.cpp  Plane.cpp  Vec3.cpp
